OC-1320 Addressed review issues
* Ensured center-aligned placed items stack vertically via CSS change.  Updated tests.
* Added margin-right to placed items with numerical input, to ensure they won't
  overlap the input box and button.  Tests TODO.
* Studio: shortened the align options text
* Tests: added comments

--- a/drag_and_drop_v2/public/css/drag_and_drop.css
+++ b/drag_and_drop_v2/public/css/drag_and_drop.css
@@ -161,6 +161,10 @@
 .xblock--drag-and-drop .zone .item-align-center {
     text-align: center;
 }
+.xblock--drag-and-drop .zone .item-align-center .option {
+    display: block;
+    margin: auto;
+}
 
 /* Focused option */
 .xblock--drag-and-drop .drag-container .item-bank .option:focus,
